Closes #1818: Fix ingest (#1832)